# paperless-exporter

./: .typos.toml  README.md  devenv.nix  pyproject.toml  pytest.ini
.github/workflows/: test.yml
fixtures/: .gitignore
fixtures/library.paperless/: DocumentWallet.documentwalletsql  DocumentWallet.documentwalletsql-journal
fixtures/library.paperless/Backups/: DocumentWallet 1.documentwalletsql
src/: cli.py  file_handler.py  model.py  obsidian.py  tag_set.py
src/tests/: __init__.py  test_check_orphaned_files.py  test_cli.py  test_cli_validation.py  test_obsidian.py  test_utils.py
src/tests/__snapshots__/: test_check_orphaned_files.ambr  test_cli.ambr  test_obsidian.ambr
